# app_ToDo

./: .dockerignore  .env  .env.example  CONTEXT.md  Dockerfile  Dockerfile.dev  README.md  crear_demo.py  docker-compose.yml  pyproject.toml  rxconfig.py
alembic/versions/: 06930840796c_.py
todo_app/: app.py  todo_app.py
todo_app/components/: __init__.py  auth_button.py  navbar.py  tarea_form.py  tarea_item.py
todo_app/components/ui/: styles.py
todo_app/models/: __init__.py  tarea.py  usuario.py
todo_app/pages/: __init__.py  auth.py  dashboard.py
todo_app/states/: __init__.py  app_state.py  auth.py  estado.py  tareas.py
